--- a/app.json
+++ b/app.json
@@ -3,8 +3,8 @@
     "name": "LiturgicalBooks",
     "slug": "LiturgicalBooks",
     "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "orientation": "landscape",
+    "icon": "./assets/cymbals.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
@@ -21,10 +21,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.minaazer.LiturgicalBooks"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "2c2c0d93-d8b8-4188-864e-b797d38638fb"
+      }
     }
   }
 }
