--- a/package.json
+++ b/package.json
@@ -9,13 +9,36 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-navigation/drawer": "^6.6.3",
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "@react-navigation/stack": "^6.3.17",
+    "@shopify/flash-list": "^1.6.1",
     "expo": "~49.0.7",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.3"
+    "react-native": "0.72.3",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-pager": "^0.0.3",
+    "react-native-pager-view": "^6.2.0",
+    "react-native-paper": "^5.10.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-responsive-fontsize": "^0.5.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-super-grid": "^5.0.0",
+    "react-native-webview": "^13.6.0",
+    "react-paginate": "^8.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-react-native-babel-preset": "^0.77.0",
+    "raw-loader": "^4.0.2"
   },
   "private": true
 }
