--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-native-screens": "~3.22.0",
     "react-native-super-grid": "^5.0.0",
     "react-native-webview": "13.2.2",
-    "react-paginate": "^8.2.0"
+    "react-paginate": "^8.2.0",
+    "typescript": "^5.1.3",
+    "@types/react": "~18.2.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
