--- a/eas.json
+++ b/eas.json
@@ -9,7 +9,8 @@
     },
     "preview": {
       "android": {
-        "buildType": "apk"
+        "buildType": "apk",
+      
       }
     },
     "production": {}
@@ -17,4 +18,5 @@
   "submit": {
     "production": {}
   }
+
 }
