--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "@shopify/flash-list": "1.4.3",
+    "@types/react": "~18.2.14",
     "expo": "~49.0.7",
     "expo-app-loading": "^2.1.1",
+    "expo-asset": "^8.10.1",
     "expo-font": "~11.4.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
@@ -34,8 +36,7 @@
     "react-native-super-grid": "^5.0.0",
     "react-native-webview": "13.2.2",
     "react-paginate": "^8.2.0",
-    "typescript": "^5.1.3",
-    "@types/react": "~18.2.14"
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
