updated many things

--- a/app.json
+++ b/app.json
@@ -15,13 +15,15 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.minaazer.liturgicalbooks"
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/cymbals.png",
+        "backgroundColor": "transparent"
       },
+      "icon": "./assets/cymbals.png",
       "package": "com.minaazer.LiturgicalBooks",
       "permissions": ["INTERNET", "ACCESS_NETWORK_STATE", "ACCESS_WIFI_STATE"]
     },
