--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "0.2.9",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
+    "@reduxjs/toolkit": "^1.9.7",
     "@shopify/flash-list": "1.4.3",
     "@types/react": "~18.2.14",
     "expo": "~49.0.7",
@@ -28,7 +30,8 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-pager": "^0.0.3",
     "react-native-pager-view": "^6.2.0",
-    "react-native-paper": "^5.10.1",
+    "react-native-paper": "^5.11.0",
+    "react-native-picker-select": "^8.1.0",
     "react-native-reanimated": "~3.3.0",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.6.3",
