--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@react-native-masked-view/masked-view": "0.2.9",
-    "@react-native-picker/picker": "^2.5.1",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
@@ -25,11 +25,11 @@
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.6",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-pager": "^0.0.3",
-    "react-native-pager-view": "^6.2.0",
+    "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.11.0",
     "react-native-picker-select": "^8.1.0",
     "react-native-reanimated": "~3.3.0",
