--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 4.1.2"
+    "version": ">= 4.1.2",
+    "promptToConfigurePushNotifications": false
   },
   "build": {
     "development": {
@@ -10,7 +11,6 @@
     "preview": {
       "android": {
         "buildType": "apk"
-      
       }
     },
     "production": {}
@@ -18,5 +18,4 @@
   "submit": {
     "production": {}
   }
-
 }
