--- a/package.json
+++ b/package.json
@@ -15,14 +15,12 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "@reduxjs/toolkit": "^1.9.7",
-    "@shopify/flash-list": "1.4.3",
     "@types/react": "~18.2.14",
-    "expo": "~49.0.7",
-    "expo-app-loading": "^2.1.1",
+    "expo": "^49.0.16",
+    "expo-app-loading": "^1.0.3",
     "expo-asset": "^8.10.1",
     "expo-font": "~11.4.0",
-    "expo-splash-screen": "~0.20.5",
+    "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
@@ -31,12 +29,9 @@
     "react-native-pager": "^0.0.3",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.11.0",
-    "react-native-picker-select": "^8.1.0",
     "react-native-reanimated": "~3.3.0",
-    "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-super-grid": "^5.0.0",
     "react-native-webview": "13.2.2",
     "react-paginate": "^8.2.0",
     "typescript": "^5.1.3"
