--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/react-native": "^0.72.5",
     "metro-react-native-babel-preset": "^0.77.0",
     "raw-loader": "^4.0.2"
   },
