updated drawer logic and styling and moved components to own files

--- a/eas.json
+++ b/eas.json
@@ -21,7 +21,7 @@
     "production": {
       "android": {
         "serviceAccountKeyPath": "./service-account.json",
-        "track": "internal"
+        "track": "production"
       }
     }
   }
