--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-masked-view/masked-view": "0.2.9",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/drawer": "^6.6.3",
@@ -20,12 +21,16 @@
     "expo-app-loading": "^1.0.3",
     "expo-asset": "^8.10.1",
     "expo-font": "~11.4.0",
+    "expo-keep-awake": "^12.8.2",
     "expo-splash-screen": "^0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.19",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-drawer-layout": "^3.2.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-keep-awake": "^4.0.0",
     "react-native-pager": "^0.0.3",
     "react-native-pager-view": "6.2.0",
     "react-native-paper": "^5.11.0",
@@ -39,6 +44,10 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react-native": "^0.72.5",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
     "metro-react-native-babel-preset": "^0.77.0",
     "raw-loader": "^4.0.2"
   },
