--- a/package.json
+++ b/package.json
@@ -9,37 +9,38 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.21.0",
-    "@react-native-masked-view/masked-view": "0.2.9",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-masked-view/masked-view": "0.3.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "@types/react": "~18.2.14",
-    "expo": "^49.0.16",
+    "@types/react": "~18.2.45",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "expo": "^50.0.14",
     "expo-app-loading": "^1.0.3",
-    "expo-asset": "^8.10.1",
-    "expo-font": "~11.4.0",
-    "expo-keep-awake": "^12.8.2",
-    "expo-splash-screen": "^0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-updates": "~0.18.19",
+    "expo-asset": "~9.0.2",
+    "expo-font": "~11.10.3",
+    "expo-keep-awake": "~12.8.2",
+    "expo-splash-screen": "~0.26.4",
+    "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.12",
     "react": "18.2.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.6",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-keep-awake": "^4.0.0",
     "react-native-pager": "^0.0.3",
-    "react-native-pager-view": "6.2.0",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.11.0",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-webview": "13.2.2",
+    "react-native-reanimated": "~3.6.2",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-webview": "13.6.4",
     "react-paginate": "^8.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
