Thursday and Friday

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "LiturgicalBooks",
     "slug": "LiturgicalBooks",
-    "version": "1.0.17",
+    "version": "1.0.21",
     "orientation": "landscape",
     "icon": "./assets/cymbals.png",
     "userInterfaceStyle": "light",
@@ -11,11 +11,13 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.minaazer.liturgicalbooks",
-      "buildNumber": "18"
+      "buildNumber": "23"
     },
     "android": {
       "adaptiveIcon": {
@@ -23,7 +25,11 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.minaazer.LiturgicalBooks",
-      "permissions": ["INTERNET", "ACCESS_NETWORK_STATE", "ACCESS_WIFI_STATE"],
+      "permissions": [
+        "INTERNET",
+        "ACCESS_NETWORK_STATE",
+        "ACCESS_WIFI_STATE"
+      ],
       "versionCode": 18
     },
     "web": {
@@ -40,6 +46,8 @@
     "updates": {
       "url": "https://u.expo.dev/2c2c0d93-d8b8-4188-864e-b797d38638fb"
     },
-    "plugins": ["expo-font"]
+    "plugins": [
+      "expo-font"
+    ]
   }
 }
