--- a/package.json
+++ b/package.json
@@ -9,41 +9,41 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-masked-view/masked-view": "0.3.0",
-    "@react-native-picker/picker": "2.6.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-masked-view/masked-view": "^0.3.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "@types/react": "~18.2.45",
+    "@types/react": "^18.2.79",
     "babel-plugin-module-resolver": "^5.0.0",
-    "expo": "^50.0.17",
+    "expo": "^51.0.2",
     "expo-app-loading": "^1.0.3",
-    "expo-asset": "~9.0.2",
-    "expo-font": "~11.10.3",
-    "expo-keep-awake": "~12.8.2",
-    "expo-splash-screen": "~0.26.4",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.12",
+    "expo-asset": "^10.0.6",
+    "expo-font": "^12.0.5",
+    "expo-keep-awake": "^13.0.1",
+    "expo-splash-screen": "^0.27.4",
+    "expo-status-bar": "^1.12.1",
+    "expo-updates": "^0.25.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.74.1",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.14.0",
+    "react-native-gesture-handler": "^2.16.1",
     "react-native-keep-awake": "^4.0.0",
     "react-native-pager": "^0.0.3",
-    "react-native-pager-view": "6.2.3",
+    "react-native-pager-view": "^6.3.0",
     "react-native-paper": "^5.11.0",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "react-native-webview": "13.6.4",
+    "react-native-reanimated": "^3.10.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "react-native-webview": "^13.8.6",
     "react-paginate": "^8.2.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.24.0",
     "@types/react-native": "^0.72.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
