--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "0.3.1",
     "@react-native-picker/picker": "2.7.5",
     "@react-navigation/drawer": "^6.6.3",
@@ -18,7 +19,7 @@
     "@react-navigation/stack": "^6.3.17",
     "@types/react": "~18.2.79",
     "babel-plugin-module-resolver": "^5.0.0",
-    "expo": "^51.0.2",
+    "expo": "^52.0.7",
     "expo-app-loading": "^1.0.3",
     "expo-asset": "~10.0.10",
     "expo-font": "~12.0.9",
@@ -35,10 +36,11 @@
     "react-native-pager": "^0.0.3",
     "react-native-pager-view": "6.3.0",
     "react-native-paper": "^5.11.0",
-    "react-native-reanimated": "~3.10.1",
+    "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-webview": "13.8.6",
+    "react-native-version-check": "^3.4.7",
+    "react-native-webview": "^13.8.6",
     "react-paginate": "^8.2.0",
     "typescript": "~5.3.3"
   },
