--- a/package.json
+++ b/package.json
@@ -4,43 +4,44 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-masked-view/masked-view": "0.3.1",
-    "@react-native-picker/picker": "2.7.5",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
-    "@types/react": "~18.2.79",
+    "@types/react": "18.3.12",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "^52.0.7",
     "expo-app-loading": "^1.0.3",
-    "expo-asset": "~10.0.10",
-    "expo-font": "~12.0.9",
-    "expo-keep-awake": "~13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-updates": "~0.25.22",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "expo-asset": "11.0.1",
+    "expo-font": "13.0.1",
+    "expo-keep-awake": "14.0.1",
+    "expo-splash-screen": "0.29.11",
+    "expo-status-bar": "2.0.0",
+    "expo-system-ui": "^4.0.3",
+    "expo-updates": "0.26.7",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "2.20.2",
     "react-native-keep-awake": "^4.0.0",
     "react-native-pager": "^0.0.3",
-    "react-native-pager-view": "6.3.0",
+    "react-native-pager-view": "6.4.1",
     "react-native-paper": "^5.11.0",
     "react-native-reanimated": "^3.16.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "4.1.0",
     "react-native-version-check": "^3.4.7",
-    "react-native-webview": "^13.8.6",
+    "react-native-webview": "13.12.4",
     "react-paginate": "^8.2.0",
     "typescript": "~5.3.3"
   },
