--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "expo-asset": "11.0.1",
     "expo-font": "13.0.1",
     "expo-keep-awake": "14.0.1",
+    "expo-screen-orientation": "~8.0.1",
     "expo-splash-screen": "0.29.11",
     "expo-status-bar": "2.0.0",
     "expo-system-ui": "^4.0.3",
     "expo-updates": "0.26.7",
     "react": "18.3.1",
     "react-native": "0.76.2",
+    "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "2.20.2",
@@ -37,14 +39,14 @@
     "react-native-pager": "^0.0.3",
     "react-native-pager-view": "6.4.1",
     "react-native-paper": "^5.11.0",
+    "react-native-picker-select": "^9.3.1",
     "react-native-reanimated": "^3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "4.1.0",
     "react-native-version-check": "^3.4.7",
     "react-native-webview": "13.12.4",
     "react-paginate": "^8.2.0",
-    "typescript": "~5.3.3",
-    "expo-screen-orientation": "~8.0.1"
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
