--- a/eas.json
+++ b/eas.json
@@ -2,7 +2,8 @@
   "cli": {
     "version": ">= 4.1.2",
     "promptToConfigurePushNotifications": false,
-    "appVersionSource": "local"
+    "appVersionSource": "local",
+    "preSubmit": "node extractReleaseNotes.js > release-notes.txt"
   },
   "build": {
     "development": {
@@ -23,6 +24,7 @@
   },
   "submit": {
     "production": {
+      "releaseNotes": "@release-notes.txt",
       "android": {
         "serviceAccountKeyPath": "./service-account.json",
         "track": "production"
