holy week updates

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "expo": "^52.0.7",
     "expo-app-loading": "^1.0.3",
     "expo-asset": "11.0.1",
+    "expo-device": "^7.0.3",
     "expo-font": "13.0.1",
     "expo-keep-awake": "14.0.1",
+    "expo-navigation-bar": "^4.0.9",
     "expo-screen-orientation": "~8.0.1",
     "expo-splash-screen": "0.29.11",
     "expo-status-bar": "2.0.0",
@@ -33,7 +35,7 @@
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "2.20.2",
+    "react-native-gesture-handler": "^2.20.2",
     "react-native-keep-awake": "^4.0.0",
     "react-native-pager": "^0.0.3",
     "react-native-pager-view": "6.4.1",
