--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/config-plugins": "~10.1.1",
+    "@expo/prebuild-config": "~9.0.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-masked-view/masked-view": "0.3.2",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
@@ -19,7 +21,6 @@
     "@types/react": "~19.0.10",
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "^53.0.4",
-    "expo-app-loading": "^1.0.3",
     "expo-asset": "~11.1.4",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.0",
@@ -31,7 +32,7 @@
     "expo-system-ui": "~5.0.6",
     "expo-updates": "~0.28.11",
     "react": "19.0.0",
-    "react-native": "0.79.1",
+    "react-native": "^0.79.5",
     "react-native-bouncy-checkbox": "^4.1.2",
     "react-native-drawer-layout": "^3.2.2",
     "react-native-fs": "^2.20.0",
@@ -41,17 +42,17 @@
     "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.11.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.3.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.11.1",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-version-check": "^3.4.7",
-    "react-native-webview": "13.13.5",
+    "react-native-webview": "13.15.0",
     "semver": "^7.6.3",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "expo-linking": "~7.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
-    "@types/react-native": "^0.72.5",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "eslint": "^8.56.0",
