--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "^53.0.4",
     "expo-asset": "~11.1.4",
+    "expo-av": "^15.1.7",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.0",
     "expo-keep-awake": "~14.1.4",
+    "expo-linking": "~7.1.7",
     "expo-navigation-bar": "~4.2.3",
     "expo-screen-orientation": "~8.1.5",
     "expo-splash-screen": "~0.30.7",
@@ -48,8 +50,7 @@
     "react-native-version-check": "^3.4.7",
     "react-native-webview": "13.15.0",
     "semver": "^7.6.3",
-    "typescript": "~5.8.3",
-    "expo-linking": "~7.1.7"
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
