--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-plugin-module-resolver": "^5.0.0",
     "expo": "^53.0.4",
     "expo-asset": "~11.1.4",
+    "expo-audio": "^0.4.8",
     "expo-av": "^15.1.7",
     "expo-device": "~7.1.4",
     "expo-font": "~13.3.0",
