--- a/package.json
+++ b/package.json
@@ -9,49 +9,51 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/config-plugins": "~10.1.1",
-    "@expo/prebuild-config": "~9.0.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.1",
+    "@expo/config-plugins": "~54.0.1",
+    "@expo/prebuild-config": "~54.0.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-masked-view/masked-view": "0.3.2",
-    "@react-navigation/drawer": "^6.6.3",
-    "@react-navigation/native": "^6.1.7",
-    "@react-navigation/native-stack": "^6.9.13",
-    "@react-navigation/stack": "^6.3.17",
-    "@types/react": "~19.0.10",
+    "@react-navigation/drawer": "7.0.0",
+    "@react-navigation/native": "^7.1.18",
+    "@react-navigation/native-stack": "^7.0.0",
+    "@react-navigation/stack": "7.0.0",
+    "@types/react": "~19.1.10",
     "babel-plugin-module-resolver": "^5.0.0",
-    "expo": "^53.0.4",
-    "expo-asset": "~11.1.4",
-    "expo-audio": "^0.4.8",
-    "expo-av": "^15.1.7",
-    "expo-device": "~7.1.4",
-    "expo-font": "~13.3.0",
-    "expo-keep-awake": "~14.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-navigation-bar": "~4.2.3",
-    "expo-screen-orientation": "~8.1.5",
-    "expo-splash-screen": "~0.30.7",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.6",
-    "expo-updates": "~0.28.11",
-    "react": "19.0.0",
-    "react-native": "^0.79.5",
+    "expo": "54.0.19",
+    "expo-asset": "~12.0.9",
+    "expo-audio": "~1.0.13",
+    "expo-av": "~16.0.7",
+    "expo-build-properties": "~1.0.9",
+    "expo-device": "~8.0.9",
+    "expo-font": "~14.0.9",
+    "expo-keep-awake": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-navigation-bar": "~5.0.9",
+    "expo-screen-orientation": "~9.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.12",
+    "react": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-bouncy-checkbox": "^4.1.2",
-    "react-native-drawer-layout": "^3.2.2",
+    "react-native-drawer-layout": "^4.0.0",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-keep-awake": "^4.0.0",
     "react-native-pager": "^0.0.3",
-    "react-native-pager-view": "6.7.1",
+    "react-native-pager-view": "6.9.1",
     "react-native-paper": "^5.11.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.11.1",
+    "react-native-screens": "~4.16.0",
     "react-native-select-dropdown": "^4.0.1",
     "react-native-version-check": "^3.4.7",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.5.1",
     "semver": "^7.6.3",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
