--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@babel/core": "^7.26.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
+    "eas-cli": "^16.28.0",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
     "metro-react-native-babel-preset": "^0.77.0",
