--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/config-plugins": "~10.1.1",
     "@expo/prebuild-config": "~9.0.0",
+    "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "^8.4.1",
     "@react-native-masked-view/masked-view": "0.3.2",
@@ -51,7 +52,8 @@
     "react-native-version-check": "^3.4.7",
     "react-native-webview": "13.15.0",
     "semver": "^7.6.3",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
