editor ui changes and fixed jsons for variable consitency and updates service/services season/seasons

--- a/data/jsons/psalmody/seasonalPraises.json
+++ b/data/jsons/psalmody/seasonalPraises.json
@@ -11522,7 +11522,7 @@
         "arabic_title": "طرح آدام للفعلة القديسين",
         "table_class": "table-invisible",
         "caption_class": "caption table-invisible",
-        "season": "Kiahk",
+        "seasons": ["Kiahk"],
         "adamWatos": "Adam",
         "placement": [
           "preTheotokiaConclusion"
@@ -11721,7 +11721,7 @@
         "arabic_title": "ختام طرح الفعلة",
         "table_class": "table-invisible",
         "caption_class": "caption table-invisible",
-        "season": "Kiahk",
+        "seasons": ["Kiahk"],
         "adamWatos": "Adam",
         "placement": [
           "preTheotokiaConclusion"
