--- a/data/jsons/repeatedPrayers/seasonalRepeatedPrayers.json
+++ b/data/jsons/repeatedPrayers/seasonalRepeatedPrayers.json
@@ -1674,7 +1674,7 @@
         "seasons": [
           "Feast of Pentecost"
         ],
-        "service": [
+        "services": [
           "matins"
         ],
         "placement": [
